--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Win Go Pro Analyzer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+*{box-sizing:border-box}
 body{
+  margin:0;
+  padding:0;
   background:#0b1d26;
-  font-family:Arial;
-  padding:15px;
+  font-family:Arial, sans-serif;
   color:#fff;
 }
-.card{
-  max-width:450px;
-  margin:auto;
+.container{
+  max-width:420px;
+  margin:20px auto;
   background:#132f3a;
   border-radius:14px;
   padding:15px;
@@ -24,18 +26,18 @@ body{
   padding:12px;
   border-radius:10px;
   text-align:center;
+  font-size:18px;
   font-weight:bold;
 }
 .tabs{
   display:flex;
-  justify-content:space-between;
+  gap:6px;
   margin:12px 0;
 }
 .tab{
   flex:1;
-  margin:0 4px;
-  padding:8px;
   background:#1e4454;
+  padding:8px;
   text-align:center;
   border-radius:8px;
   font-size:13px;
@@ -46,6 +48,7 @@ input{
   border-radius:8px;
   border:none;
   margin-top:10px;
+  font-size:14px;
 }
 .section{
   background:#1e4454;
@@ -55,10 +58,11 @@ input{
   font-size:14px;
 }
 .progress{
+  width:100%;
+  height:14px;
   background:#0b1d26;
   border-radius:10px;
   overflow:hidden;
-  height:14px;
   margin-top:6px;
 }
 .bar{
@@ -66,13 +70,6 @@ input{
   width:0%;
   background:#00ffae;
 }
-.result{
-  text-align:center;
-  margin-top:15px;
-}
-.big{color:#f39c12;font-size:26px;font-weight:bold}
-.small{color:#3498db;font-size:26px;font-weight:bold}
-.wait{color:#ccc;font-size:22px;font-weight:bold}
 button{
   width:100%;
   padding:12px;
@@ -81,4 +78,126 @@ button{
   border-radius:10px;
   background:#e53935;
   color:#fff;
-  font
+  font-size:16px;
+  font-weight:bold;
+}
+.result{
+  text-align:center;
+  margin-top:15px;
+}
+.big{
+  color:#f39c12;
+  font-size:26px;
+  font-weight:bold;
+}
+.small{
+  color:#3498db;
+  font-size:26px;
+  font-weight:bold;
+}
+.wait{
+  color:#cccccc;
+  font-size:22px;
+  font-weight:bold;
+}
+.note{
+  text-align:center;
+  font-size:12px;
+  opacity:0.6;
+  margin-top:10px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+
+  <div class="header">PakGames Win Go – Pro Analyzer</div>
+
+  <div class="tabs">
+    <div class="tab">1 Min</div>
+    <div class="tab">3 Min</div>
+    <div class="tab">5 Min</div>
+  </div>
+
+  <input id="history" placeholder="Last results likho (example: 2,0,4,6,8)">
+
+  <button onclick="analyze()">Analyze Now</button>
+
+  <div class="section">
+    📊 Trend
+    <div class="progress"><div class="bar" id="b1"></div></div>
+  </div>
+
+  <div class="section">
+    📈 Momentum
+    <div class="progress"><div class="bar" id="b2"></div></div>
+  </div>
+
+  <div class="section">
+    🔁 Pattern
+    <div class="progress"><div class="bar" id="b3"></div></div>
+  </div>
+
+  <div class="section">
+    ⚖️ Balance
+    <div class="progress"><div class="bar" id="b4"></div></div>
+  </div>
+
+  <div class="result" id="finalResult">
+    <div class="wait">WAIT FOR DATA</div>
+  </div>
+
+  <div class="note">
+    Personal analysis tool • Probability based • No guarantee
+  </div>
+
+</div>
+
+<script>
+function analyze(){
+  let input = document.getElementById("history").value;
+  if(input.trim()===""){
+    alert("Please last results enter karo");
+    return;
+  }
+
+  let arr = input.split(",").map(x=>parseInt(x.trim())).filter(x=>!isNaN(x));
+  if(arr.length < 3){
+    alert("Kam az kam 3 results dalo");
+    return;
+  }
+
+  let big=0, small=0;
+  arr.forEach(n=>{
+    if(n>=5) big++; else small++;
+  });
+
+  let t1 = Math.min(90, 40 + big*8);
+  let t2 = Math.min(90, 40 + (arr[arr.length-1]>=5 ? 20 : 10));
+  let t3 = Math.min(90, 40 + Math.abs(big-small)*6);
+  let t4 = Math.min(90, 50 + (big>small ? 10 : -5));
+
+  document.getElementById("b1").style.width = t1+"%";
+  document.getElementById("b2").style.width = t2+"%";
+  document.getElementById("b3").style.width = t3+"%";
+  document.getElementById("b4").style.width = t4+"%";
+
+  let bigP = Math.round((t1+t2+t3+t4)/4);
+  let smallP = 100 - bigP;
+
+  let out = document.getElementById("finalResult");
+
+  if(bigP < 55 && smallP < 55){
+    out.innerHTML = `<div class="wait">NO TRADE</div>`;
+  }else if(bigP > smallP){
+    out.innerHTML = `<div class="big">BIG ${bigP}%</div><div class="small">SMALL ${smallP}%</div>`;
+  }else{
+    out.innerHTML = `<div class="small">SMALL ${smallP}%</div><div class="big">BIG ${bigP}%</div>`;
+  }
+}
+</script>
+
+</body>
+</html>
